# cyber-persona

./: .env.example  .gitignore  README.md  amp  bots.json  package-lock.json  package.json  personas.example.json  pyproject.toml  tsconfig.base.json  tsconfig.json
docs/: architecture.md
docs/plans/: 2026-04-15-flat-multi-agent-architecture.md
reference/: .env.example
souls/: critic.md  researcher.md
src/cyber_persona/client/api/: client.py
src/cyber_persona/config/: settings.py
src/cyber_persona/engine/: builder.py  llm_factory.py
src/cyber_persona/engine/nodes/: chat_agent.py  drafter.py  harness.py  intent_router.py  llm.py  output_verifier.py  plan_node.py  supervisor.py  synthesizer.py  verifier.py
src/cyber_persona/engine/nodes/debater/: blue_team.py  red_team.py
src/cyber_persona/engine/nodes/research_sub_agent/: __init__.py  graph.py
src/cyber_persona/engine/nodes/research_supervisor/: __init__.py  gather.py  graph.py  plan.py  reflect.py  router.py
src/cyber_persona/engine/nodes/retriever/: query_generator.py
src/cyber_persona/models/: state.py
src/cyber_persona/server/: deps.py
src/cyber_persona/server/routes/: chat.py
src/cyber_persona/tools/: langchain_compat.py  search.py
tests/engine/nodes/: test_chat_agent.py
tests/models/: test_state.py
tests/tools/: test_langchain_compat.py
web/: package-lock.json
web/src/components/: TimelineNode.tsx
web/src/hooks/: useSSE.ts
web/src/types/: events.ts
